# platsec-compliance-alerting

./: .gitignore  .pipenv-version  Dockerfile  Makefile  Pipfile  README.md  buildspec.yml  handler.py  lambda.Dockerfile  mypy.ini  platsec_compliance_alerting.py  platsec_compliance_alerting.sh  platsec_compliance_alerting_lambda.py  pyproject.toml
.github/: dependabot.yaml
docs/: architecture.dsl
src/: __init__.py  audit_analyser.py  audit_fetcher.py  aws_client_factory.py  aws_compliance_alerting.py  aws_s3_client.py  compliance_alerter.py  compliance_checker.py  config.py  exceptions.py  findings_filter.py  notification.py  notification_filter.py  notification_filter_config.py  notification_mapper.py  notification_mapping.py  notifications_filter.py  pagerduty_notification_mapper.py  pagerduty_notifier.py  pagerduty_payload_filter.py  report_fetcher.py  s3_config_check.py  slack_notification.py  slack_notification_mappings.py  slack_notifier.py
tests/: __init__.py  test_audit_analyser.py  test_audit_fetcher.py  test_aws_client_factory.py  test_aws_compliance_alerting.py  test_compliance_alerter.py  test_compliance_checker.py  test_config.py  test_filter_config.py  test_findings_filter.py  test_github_compliance_alerter.py  test_notification_filter.py  test_notification_filter_config.py  test_notification_mapper.py  test_notification_mapping.py  test_notifications_filter.py  test_pagerduty_notification_mapper.py  test_pagerduty_notifier.py  test_pagerduty_payload_filter.py  test_report_fetcher.py  test_s3_compliance_alerter.py  test_s3_config_check.py  (+2 more)
(+100 files in other folders)
