[project]
name = "platsec-compliance-alerting"
version = "0.1.0"
description = "Analyses Platsec AWS Scanner reports and alerts on non-compliant resources"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.13"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
boto3 = "^1.37.8"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
ruff = "^0.9.9"
mypy = "^1.15.0"
httpretty = "^1.1.4"
responses = "^0.25.6"
moto = "^5.1.1"
pyyaml = "^6.0.2"
typing-extensions = "^4.12.2"

